# rosbag_recorder

./: CMakeLists.txt  README.md  package.xml  setup.py
ros/launch/: rosbag_recorder.launch
ros/scripts/: rosbag_recorder_node
ros/src/rosbag_recorder/: rosbag_recorder.py
